<resources>
    <string name="app_name">Officer</string>
    <string name="search">Поиск</string>
    <string name="purchase_number">Номер покупки</string>
    <string name="check">Одобрить</string>
    <string name="purchase_date">Дата покупки</string>
    <string name="to">-</string>
    <string name="extended_search">Рассширенный поиск</string>
    <string name="unckeded">Непроверенные</string>
    <string name="checked">Проверенные</string>
    <string name="all">Все</string>
    <string name="goods_count">шт.</string>
    <string name="payed">Оплаченных:</string>
    <string name="expired">Просроченных:</string>
</resources>
