<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.volkdem.ecashier.officer.SearchOrdersActivity">

    <LinearLayout
        android:id="@+id/extended_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extended_search"
            android:textSize="@dimen/main_text_size"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/extended_search"/>

    <LinearLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/extended_search"
        android:background="@color/grey"
        android:visibility="gone">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unckeded"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/unchecked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checked"/>
            <RadioButton
                android:id="@+id/all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/main_text_size"
                    android:text="18.06.2016"
                    android:textAlignment="center">
                </TextView>


                <ImageView
                    android:id="@+id/date_from_image"
                    android:layout_width="@dimen/date_height"
                    android:layout_height="@dimen/date_height"
                    android:src="@drawable/calendar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/date_height"
                    android:textSize="@dimen/main_text_size"
                    android:textAlignment="center"
                    android:text="@string/to">
                </TextView>

                <TextView
                    android:id="@+id/date_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/main_text_size"
                    android:textAlignment="center"
                    android:text="18.06.2016"/>

                <ImageView
                    android:id="@+id/date_to_image"
                    android:layout_width="@dimen/date_height"
                    android:layout_height="@dimen/date_height"
                    android:src="@drawable/calendar"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
